--- a/axelor-supplychain/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_fr.csv
@@ -495,6 +495,7 @@
 "Supplychain batch","Batch de la chaîne de logistique",,
 "Supplychain batch filters",,,
 "Supplychain batches","Batchs de la chaîne de logistique",,
+"Take in account sub categories","Prise en compte des sous-catégories",,
 "Task","Tâche",,
 "Tax number is missing on partner %s.","Il manque le numéro de TVA sur le tiers %s.",,
 "Team","Équipe",,
