--- a/axelor-production/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-production/src/main/resources/i18n/messages_fr.csv
@@ -204,6 +204,7 @@
 "Draft","Brouillon",,
 "Draft MOs","OFs brouillons",,
 "Draft Operations","Opérations brouillons",,
+"Draft orders","Liste OF",,
 "Duration","Durée",,
 "Duration (days)","Durée (jours)",,
 "Duration (hours)","Durée (heures)",,
@@ -234,7 +235,7 @@
 "From","De",,
 "From Date","Date de début",,
 "General BoM","Nomenclatures générales",,
-"Generate MO","Générer l'OF",,
+"Generate MO.","Générer OF.",,
 "Generate MPS forecasts","Générer les prévisions PDP",,
 "Generate Sales and Operations Planning Lines","Générer les lignes de plan industriel et commercial",,
 "Generate a purchase order on MO planning","Générer une commande d'achat à la validation de l'OF",,
@@ -438,6 +439,7 @@
 "Picture","Image",,
 "Plan","Planifier",,
 "Plan only product with missing quantities","Planifier seulement les produits avec une quantité manquante",,
+"Plan selected orders and discard others","Planifier les ordres sélectionnés et supprimer les autres.",,
 "Planned","Planifié",,
 "Planned MOs","OF planifiés",,
 "Planned Operations","Opérations planifiées",,
@@ -452,6 +454,7 @@
 "Please fill the machine in the workcenter %s.","Merci de remplir la machine à utiliser dans le poste de charge %s.",,
 "Please fill unit for product %s.","Veuillez renseigner l'unité du produit %s.",,
 "Please select an element (a product, a product category or a product family) to run calculation",,,
+"Please select at least one MO","Veuillez sélectionner au moins un OF.",,
 "Please select at least one product in the list.","Merci de sélectionner au moins un produit dans la liste",,
 "Please select the Manufacturing order(s) to print.","Merci de sélectionner les ordres de fabrication à imprimer",,
 "Please select the Operation order(s) to print.","Merci de sélectionner les opérations de fabrication à imprimer",,
