43072: Add support for supplier invoices in the merging process

--- a/axelor-account/src/main/resources/i18n/messages.csv
+++ b/axelor-account/src/main/resources/i18n/messages.csv
@@ -726,7 +726,6 @@
 "Confirm",,,
 "Confirm cancellation",,,
 "Confirm payment",,,
-"Confirmation",,,
 "Confirmed",,,
 "Confirmed Customer payments",,,
 "Confirmed Supplier payments",,,
@@ -1282,6 +1281,7 @@
 "Manage factors",,,
 "Manage multi budgets on lines",,,
 "Management",,,
+"Management of merge conflicts",,,
 "Managements",,,
 "Mandate signature city",,,
 "Mandate signature date",,,
@@ -1292,7 +1292,9 @@
 "Max Nbr. for payment schedule rejection",,,
 "Max Nbr. of invoices rejection",,,
 "Merge Cust. Invoices",,,
+"Merge Suppl. Invoices",,,
 "Merge into single cust. invoice",,,
+"Merge into single suppl. invoice",,,
 "Message models",,,
 "Message on printing",,,
 "Message template",,,
@@ -1851,6 +1853,7 @@
 "Summary of gross values and depreciation",,,
 "Super User",,,
 "Suppl. Invoices",,,
+"Suppl. Invoices to merge",,,
 "Suppl. Invoices to pay",,,
 "Suppl. Refunds",,,
 "Supplier",,,
@@ -1922,6 +1925,7 @@
 "The payment cannot be done because the amount remaining on the invoice %s is inferior or equal to 0.",,,
 "The payment mode is not in adequacy with the invoice type",,,
 "The project must be the same for all invoices",,,
+"The purchase order must be the same for all invoices",,,
 "The reconcile %s cannot be removed, please select draft reconcile(s)",,,
 "The reconcile group cannot be validated since there is no lines.",,,
 "The record is not %s characters",,,
