--- a/axelor-account/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-account/src/main/resources/i18n/messages_fr.csv
@@ -726,7 +726,6 @@
 "Confirm","Confirmer",,
 "Confirm cancellation","Confirmer l'annulation",,
 "Confirm payment","Confirmer le paiement",,
-"Confirmation",,,
 "Confirmed","Confirmé",,
 "Confirmed Customer payments","Paiements Clients confirmés",,
 "Confirmed Supplier payments","Règlements Fournisseurs confirmés",,
@@ -1282,6 +1281,7 @@
 "Manage factors","Gérer les factors",,
 "Manage multi budgets on lines","Gérer le multi budget sur les lignes",,
 "Management","Gestion",,
+"Management of merge conflicts","Gestion des conflits de fusion",,
 "Managements","Gestions",,
 "Mandate signature city","Ville de signature du mandat",,
 "Mandate signature date","Date de signature du mandat",,
@@ -1292,7 +1292,9 @@
 "Max Nbr. for payment schedule rejection","Nbre limite de rejet Échéancier de paiement",,
 "Max Nbr. of invoices rejection","Nbre limite de rejet Facture",,
 "Merge Cust. Invoices","Fusionner Factures clients",,
+"Merge Suppl. Invoices","Fusionner Factures fournisseurs",,
 "Merge into single cust. invoice","Fusionner en une seule facture client",,
+"Merge into single suppl. invoice","Fusionner en une seule facture fournisseur",,
 "Message models","Modèles de message",,
 "Message on printing","Message sur l'impression",,
 "Message template","Modèle de message",,
@@ -1851,6 +1853,7 @@
 "Summary of gross values and depreciation","Synthèse des valeurs brutes et des amortissements",,
 "Super User","Super utilisateur",,
 "Suppl. Invoices","Factures fournisseurs",,
+"Suppl. Invoices to merge","Facture fourn. à fusionner",,
 "Suppl. Invoices to pay","Facture fourn. à payer",,
 "Suppl. Refunds","Avoirs fournisseurs",,
 "Supplier","Fournisseur",,
@@ -1922,6 +1925,7 @@
 "The payment cannot be done because the amount remaining on the invoice %s is inferior or equal to 0.","Le paiement ne peut pas être réalisé car le montant restant sur la facture %s est inférieur ou égale à 0.",,
 "The payment mode is not in adequacy with the invoice type",,,
 "The project must be the same for all invoices","Le projet doit être le même pour tout les factures",,
+"The purchase order must be the same for all invoices","La Comm. fournisseur doit être la même pour l'ensemble des factures",,
 "The reconcile %s cannot be removed, please select draft reconcile(s)","La réconciliation %s ne peut pas être supprimée, veuillez sélectionner des réconciliations au status brouillon",,
 "The reconcile group cannot be validated since there is no lines.","Le lettrage ne peut pas être validé car il n'y a pas de lignes.",,
 "The record is not %s characters","L'enregistrement ne fait pas %s caractères",,
