Compute long execution in new thread to avoid blocking the interface (#6024)
* Compute MRP in new thread to avoid blocking

The MRP is now executing in a new thread, and returns a notification to
the interface if it is taking too much time to finish.
This fixes "internal server error" created by timeout.

* Add timeout configuration for processes in AppBase

* Compute Batches in new thread to avoid blocking the user
RM23741

--- a/axelor-base/src/main/resources/i18n/messages.csv
+++ b/axelor-base/src/main/resources/i18n/messages.csv
@@ -278,9 +278,11 @@
 "Based on",,,
 "Basic overview",,,
 "Batch",,,
+"Batch %s is now finished",,,
 "Batch %s unknown",,,
 "Batch calendar synchronization",,,
 "Batch code",,,
+"Batch execution is now finished",,,
 "Batch report:",,,
 "Batch service select",,,
 "Batches",,,
@@ -654,9 +656,12 @@
 "Error : incorrect request for the indicatior generator %s",,,
 "Error : no code has been set",,,
 "Error : no export path has been set",,,
+"Error file",,,
+"Error happened during batch execution",,,
 "Error in Connection",,,
 "Error in print. Please check report configuration and print setting.",,,
 "Error logs",,,
+"Error when closing period %s",,,
 "Error while creating the file",,,
 "Error while processing zip file",,,
 "Europe/Paris",,,
@@ -689,6 +694,7 @@
 "Expression",,,
 "External",,,
 "Factor",,,
+"Failure send",,,
 "Family Code",,,
 "Family Name",,,
 "Fax",,,
@@ -966,6 +972,7 @@
 "Maximum export limit",,,
 "Maximum height should be 60 px.",,,
 "Maximum number of records to export by using this advance export.",,,
+"Maximum time before a process called by an user starts running in the background",,,
 "May",,,
 "Maybe",,,
 "Meeting",,,
@@ -1134,6 +1141,7 @@
 "Payment vouchers",,,
 "Payroll Year",,,
 "Period",,,
+"Period %s is now closed",,,
 "Period closed",,,
 "Period duration",,,
 "Periods generation assistant",,,
@@ -1578,6 +1586,7 @@
 "Time logging preference",,,
 "Time slot",,,
 "Time unit",,,
+"Timeout for processes (seconds)",,,
 "Timer",,,
 "Timer history",,,
 "Timer history list",,,
