--- a/axelor-base/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-base/src/main/resources/i18n/messages_fr.csv
@@ -278,9 +278,11 @@
 "Based on","Basé sur",,
 "Basic overview","Info. de connexion",,
 "Batch","Batch",,
+"Batch %s is now finished","Le batch %s est terminé",,
 "Batch %s unknown","Batch %s inconnu",,
 "Batch calendar synchronization","Batch synchronisation calendrier",,
 "Batch code",,,
+"Batch execution is now finished","L'exécution du batch est maintenant terminée",,
 "Batch report:","Rapport de batch :",,
 "Batch service select",,,
 "Batches","Les batchs",,
@@ -654,9 +656,11 @@
 "Error : incorrect request for the indicatior generator %s","Erreur : Requête incorrect pour le générateur d'indicateur %s",,
 "Error : no code has been set",,,
 "Error : no export path has been set",,,
+"Error happened during batch execution","Erreur pendant l'exécution du batch",,
 "Error in Connection","Erreur de connexion",,
 "Error in print. Please check report configuration and print setting.","Erreur d’impression. Veuillez vérifiez les paramètres d’impression et la configuration des rapports.",,
 "Error logs","Fichier des erreurs",,
+"Error when closing period %s","Erreur pendant la fermeture de la période %s",,
 "Error while creating the file","Erreur lors de l'écriture du fichier",,
 "Error while processing zip file","Erreur lors du traitement du fichier zip",,
 "Europe/Paris",,,
@@ -689,6 +693,7 @@
 "Expression",,,
 "External","Externe",,
 "Factor","Factor",,
+"Failure send",,,
 "Family Code","Code famille",,
 "Family Name","Nom famille",,
 "Fax","Fax",,
@@ -966,6 +971,7 @@
 "Maximum export limit","Limite maximale d’exports",,
 "Maximum height should be 60 px.","La hauteur maximale recommandée est de 60 px.",,
 "Maximum number of records to export by using this advance export.","Nombre maximum d’entrées à exporter en utilisant cet export avancé.",,
+"Maximum time before a process called by an user starts running in the background","Temps maximal d'attente que prend un traitement lancé par l'utilisateur avant de continuer en arrière-plan",,
 "May","Mai",,
 "Maybe","Peut-être",,
 "Meeting","Rendez-vous",,
@@ -1134,6 +1140,7 @@
 "Payment vouchers","Saisies paiements",,
 "Payroll Year","Année de paie",,
 "Period","Période",,
+"Period %s is now closed","La période %s est maintenant fermée.",,
 "Period closed","Période clôturée",,
 "Period duration","Durée Période",,
 "Periods generation assistant",,,
@@ -1578,6 +1585,7 @@
 "Time logging preference","Unité saisie feuille de temps",,
 "Time slot","Plage horaire",,
 "Time unit","Unité de temps",,
+"Timeout for processes (seconds)","Temps d'attente maximal pour un traitement (secondes)",,
 "Timer","Chonomètre",,
 "Timer history","Historique de chronomètre",,
 "Timer history list","Liste d'historique de chronomètre",,
