--- a/axelor-supplychain/src/main/resources/i18n/messages_en.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_en.csv
@@ -93,6 +93,8 @@
 "Committed total amount",,,
 "Company",,,
 "Complete sale order when all has been invoiced",,,
+"Computation in progress...",,,
+"Compute sub stock locations",,,
 "Configuration",,,
 "Confirm",,,
 "Confirm Purchase order generation",,,
@@ -147,6 +149,7 @@
 "End date",,,
 "Entry of stock",,,
 "Error : you have exceeded the budget %s for this period",,,
+"Error during the computation of MRP %s",,,
 "Error generating subscription invoice(s): '%s'","Erreur lors de la generation des factures d'abonnement : '%s'",,
 "Error that happened during the computation",,,
 "European declaration of services",,,
@@ -260,6 +263,7 @@
 "MRP forecasts",,,
 "MRP move types",,,
 "MRP number",,,
+"MRP n°%s is now finished",,,
 "Manage advance payments from payment conditions",,,
 "Manage stock reservation",,,
 "Mass Cust. Stock Move Invoicing",,,
@@ -512,6 +516,8 @@
 "The company is required and must be the same for all purchase orders",,,
 "The company is required and must be the same for all sale orders",,,
 "The currency is required and must be the same for all sale orders",,,
+"The execution of MRP n°%s is now finished, you can click above to see the results.",,,
+"The customer account is blocked because he has late payments.",,,
 "The invoice for the stock move %s can't be generated because of this following error : %s",,,
 "The invoice has already been generated.",,,
 "The invoice's unit is different and inconvertible into the stock move's unit.",,,
