Revert "Revert "RM#49432: add registrationCode validation (#8127)" (#8155)"
This reverts commit cb0c4a04c173a44279502eb645c2ebec0f90b039.

--- a/axelor-base/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-base/src/main/resources/i18n/messages_fr.csv
@@ -255,6 +255,7 @@
 "Auto import","Import auto",,
 "Availability","Disponibilité",,
 "Available","Disponible",,
+"Available stock",,,
 "Average Price","Prix moyen pondéré",,
 "BBAN","BBAN",,
 "BBan Key","Clé BBAN",,
@@ -752,7 +753,6 @@
 "Expression",,,
 "External","Externe",,
 "Factor","Factor",,
-"Failure send",,,
 "Family Code","Code famille",,
 "Family Name","Nom famille",,
 "Fax","Fax",,
@@ -780,6 +780,7 @@
 "File types","Types de fichier",,
 "FileTab",,,
 "Filters","Filtres",,
+"Financial discount",,,
 "Find","Trouver",,
 "FindNew",,,
 "Finished","Terminé",,
@@ -1490,6 +1491,8 @@
 "Region name","Nom Région",,
 "Regions","Régions",,
 "Registration code","N° SIRET",,
+"Registration code is invalid.","N° SIRET invalide.",,
+"Registration code is required.","N° SIRET requis.",,
 "Regroup products on printings","Regrouper les produits sur les impressions",,
 "Reimb._block","Remb.","Valeur de blockingSelect, évite les doublons de traduction",
 "Reimbursements","Remboursements",,
@@ -1935,7 +1938,6 @@
 "Wednesdays","Mercredis",,
 "Week days","Jours de la semaine",,
 "Weekly Planning","Planning hebdomadaire",,
-"Weekly plann","Planning hebdomadaire",,
 "Weekly planning","Planning hebdomadaire",,
 "Whether to show help messages.","Activer ou désactiver l’affichage des messages d’aide",,
 "Whether to use tabbed ui.","Activer ou désactiver un affichage par onglets.",,
@@ -1956,6 +1958,7 @@
 "Years","Années",,
 "Yes","Oui",,
 "You are about to overwrite an existing exchange rate. This rate may already be in use in the system. Do you wish to continue ?","Vous êtes sur le point de surcharger un taux de change existant. Ce taux est peut-être déjà utilisé par le système. Souhaitez-vous continuer ?",,
+"You are using a product for which the '%s' pricing should be applied.</br>However, it could not be applied.</br>Please check your pricing if this does not seem normal.",,,
 "You can not turn-off this configuration because more than one company is configurated in the system.","Vous ne pouvez pas désactiver la gestion multi-sociétés car plusieurs sociétés sont configurées dans le système",,
 "You can select only one default delivery address.","Vous ne pouvez choisir qu’une adresse de livraison par défaut.",,
 "You can select only one default invoicing address.","Vous ne pouvez choisir qu’une adresse de facturation par défaut.",,
