--- a/axelor-base/src/main/resources/i18n/messages.csv
+++ b/axelor-base/src/main/resources/i18n/messages.csv
@@ -255,6 +255,7 @@
 "Auto import",,,
 "Availability",,,
 "Available",,,
+"Available stock",,,
 "Average Price",,,
 "BBAN",,,
 "BBan Key",,,
@@ -752,7 +753,6 @@
 "Expression",,,
 "External",,,
 "Factor",,,
-"Failure send",,,
 "Family Code",,,
 "Family Name",,,
 "Fax",,,
@@ -780,6 +780,7 @@
 "File types",,,
 "FileTab",,,
 "Filters",,,
+"Financial discount",,,
 "Find",,,
 "FindNew",,,
 "Finished",,,
@@ -1490,6 +1491,8 @@
 "Region name",,,
 "Regions",,,
 "Registration code",,,
+"Registration code is invalid.",,,
+"Registration code is required.",,,
 "Regroup products on printings",,,
 "Reimb._block",,,
 "Reimbursements",,,
@@ -1935,7 +1938,6 @@
 "Wednesdays",,,
 "Week days",,,
 "Weekly Planning",,,
-"Weekly plann",,,
 "Weekly planning",,,
 "Whether to show help messages.",,,
 "Whether to use tabbed ui.",,,
@@ -1956,6 +1958,7 @@
 "Years",,,
 "Yes",,,
 "You are about to overwrite an existing exchange rate. This rate may already be in use in the system. Do you wish to continue ?",,,
+"You are using a product for which the '%s' pricing should be applied.</br>However, it could not be applied.</br>Please check your pricing if this does not seem normal.",,,
 "You can not turn-off this configuration because more than one company is configurated in the system.",,,
 "You can select only one default delivery address.",,,
 "You can select only one default invoicing address.",,,
